# learning-cpack

./: CMakeLists.txt  README  main.cpp
bar/: CMakeLists.txt  bar.cpp  bar.hpp
